Java 8 Compile Changes
- Made sure the thing now compiles to java 8 properly